--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,10 +1,10 @@
 <nav>
     <div>
-      <a>Opciones</a>
+      <button>Opciones</button>>
       <form role="search">
         <input type="search" >
         <button type="submit">Buscar</button>
       </form>
-      <a>Notificaciones</a>
+      <button>Notificaciones</button>
     </div>
   </nav>
